# Red-eye-effect

./: .gitignore  CMakeLists.txt  README.md  main.cpp
implementation/: eye_detection.cpp  eye_detection.h  hough_circles.cpp
